<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.12</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.weather.api</groupId>
	<artifactId>emibeanatte</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>emibeanatte</name>
	<description>API de Datos Meteorológicos</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
                <dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
                <dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
		</dependency>
                <dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
		</dependency>
                <dependency>
                    <groupId>com.nimbusds</groupId>
                    <artifactId>nimbus-jose-jwt</artifactId>
                    <version>9.0.1</version>
                </dependency> 
                <dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
                        <version>2.0.1.Final</version>
                </dependency>
                <dependency>
                    <groupId>org.hibernate.validator</groupId>
                    <artifactId>hibernate-validator</artifactId>
                </dependency>
                <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
                <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
                <dependency>
                    <groupId>org.zalando</groupId>
                    <artifactId>problem-spring-web</artifactId>
                    <version>0.25.1</version>
                </dependency>
                <dependency>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                    <version>2.2.0</version>
                </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.core</artifactId>
	  <version>2.7.12</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.asm</artifactId>
	  <version>9.4.0</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.antlr</artifactId>
	  <version>2.7.12</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.jpa</artifactId>
	  <version>2.7.12</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
	  <version>2.7.12</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>org.eclipse.persistence.moxy</artifactId>
	  <version>2.7.12</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.persistence</groupId>
	  <artifactId>jakarta.persistence</artifactId>
	  <version>2.2.3</version>
	 </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<image>
						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
					</image>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
                        
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>2.19.1</version>
                        </plugin>
		</plugins>
	</build>
</project>
